# yict

./: .gitignore  README.md
docs/: dependencies.md  linux-native-port-plan.md  native-status.md  next-steps.md  testing.md
native/: CMakeLists.txt  README.md
native/include/: yict_core.hpp
native/include/legacy/: unames.h  unames2.h  yictdata202.h
native/src/: main.cpp  yict_core.cpp
native/tests/: test_yict_core.cpp
rel/: readme.txt
release/: README.md
source/: README.md  YICT.clw  YICT.cpp  YICT.dsp  YICT.dsw  cart.h  conditions.c_  custom.cpp  maindlg.cpp  maindlg.h  selectlist.h  sounddlg.h
src/: StdAfx.cpp  StdAfx.h  YICT.h  YICT.rc  cart.cpp  custom.h  customdlg.cpp  customdlg.h  export.cpp  mot2aud.c_  opendlg.cpp  opendlg.h  readme.txt  resource.h  sounddlg.cpp  sunadpcm.c_
